# zcw_c_demos

./: .gitignore  README.md
CarLicenseRecognition/: CMakeLists.txt
CarLicenseRecognition/CarAnnTrain/: CMakeLists.txt  main.cpp  train.cpp  train.h  utils.cpp
CarLicenseRecognition/CarRecgnize/: CMakeLists.txt  CarColorPlateLocation.cpp  CarColorPlateLocation.h  CarPlateLocation.cpp  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  CarSobelPlateLocation.cpp  CarSobelPlateLocation.h  main.cpp
CarLicenseRecognition/CarSvmTrain/: CMakeLists.txt  main.cpp  train.cpp  train.h  utils.h
CarLicenseRecognition/resource/: HOG_ANN_DATA.xml  HOG_ANN_ZH_DATA.xml
FaceTrain/: CMakeLists.txt  CascadeDetectorAdapter.cpp  docs.md  main.cpp
